Archive2/5f/d89a57f74f27ac/output
main.cpp: In function 'int main()':
main.cpp:24:9: error: no match for 'operator&&' (operand types are 'bool' and 'std::string {aka std::basic_string<char>}')
    test && teststr = "wow";
         ^
main.cpp:24:9: note: candidate is:
main.cpp:24:9: note: operator&&(bool, bool) <built-in>
main.cpp:24:9: note:   no known conversion for argument 2 from 'std::string {aka std::basic_string<char>}' to 'bool'
